--- a/api/.prettierrc
+++ b/api/.prettierrc
@@ -1,4 +1,10 @@
 {
+  "semi": false,
+  "trailingComma": "none",
   "singleQuote": true,
-  "trailingComma": "all"
+  "printWidth": 80,
+  "tabWidth": 4,
+  "useTabs": false,
+  "arrowParens": "avoid",
+  "endOfLine": "auto"
 }
